--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   signalr_core: ^1.1.2
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
