--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.6.0
   signalr_core: ^1.1.2
   device_preview: ^1.3.1
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
