--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -5,11 +5,16 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <AllowMissingPrunePackageData>true</AllowMissingPrunePackageData>
+
+        <Authors>sakurize</Authors>
+        <Copyright>Copyright © 2026 sakurize. All rights reserved.</Copyright>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="CliWrap" Version="3.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+        <PackageReference Include="SSH.NET" Version="2025.1.0" />
     </ItemGroup>
 
 </Project>
