--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
         android:label="frontend"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+                android:name="copyright"
+                android:value="@string/copyright" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
